# SoundTouch

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sundy/soundtouch/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  soundtouch-jni.cpp
app/src/main/cpp/SoundStretch/: CMakeLists.txt
app/src/main/cpp/SoundTouch/: CMakeLists.txt
app/src/main/cpp/include/: STTypes.h
app/src/main/java/com/sundy/soundtouch/: MainActivity.java  SoundTouch.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sundy/soundtouch/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
